public/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Parisienne&display=swap');

html,
body {
	padding: 0;
	margin: 0;
	font-family: 'Roboto Mono', monospace;
}

* {
	box-sizing: border-box;
}

a {
	color: inherit;
	text-decoration: underline;
}

a,
button {
	cursor: pointer;
}

mark {
	color: var(--primary);
	background: transparent;
}

::-webkit-scrollbar {
	width: 6px;
}

::-webkit-scrollbar-track {
	background: #21252F;
}

::-webkit-scrollbar-thumb {
	background: #363B48;
}

::-webkit-scrollbar-thumb:hover {
	background: #484D5C;
}

:root {
	--primary: #6EF2A3;
	--background: #25262A;
	--text: #FFFFFF;
	--secondary-text: #ffffff99;
}

